--- a/测试环境搭建.md
+++ b/测试环境搭建.md
@@ -1,6 +1,6 @@
-# automated-test
-自动化测试
+通过近期的学习，梳理总结环境搭建如下
 ##测试环境搭建
+
 
 ###vagrant搭建一个Linux开发环境：
 VirtualBox安装,麻瓜安装[下载地址](https://www.virtualbox.org/wiki/Downloads)；Vagrant安装[下载地址](https://www.vagrantup.com/downloads.html)
