--- a/测试环境搭建.md
+++ b/测试环境搭建.md
@@ -31,7 +31,7 @@ VirtualBox安装,麻瓜安装[下载地址](https://www.virtualbox.org/wiki/Down
 *  检查BIOS里面把Integrated Peripherals设置成打开状态
 *  打上[这个补丁](http://download.virtualbox.org/virtualbox/5.0.10/Oracle_VM_VirtualBox_Extension_Pack-5.0.10-104061.vbox-extpack)
 
-###安装webdriverio
+###安装firefox
 
 ```
  $ sudo apt-get install xvfb #安装xvfb
